--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
     <string name="app_name">FingeRate</string>
+    <string name="intro">http://14.48.175.176/~fingerrate/intro.php</string>
     <string name="home">http://14.48.175.176/~fingerrate/</string>
+    <string name="home2">http://14.48.175.176/~fingerrate/index.php</string>
     <string name="register">http://14.48.175.176/~fingerrate/bbs/register_form.php?certify_id=</string>
     <string name="register_rcmm">http://14.48.175.176/~fingerrate/bbs/register.php?mb_1=</string>
     <string name="share">http://14.48.175.176/~fingerrate/bbs/go_share.php?mb_1=</string>
-
+    <string name="login">http://14.48.175.176/~fingerrate/bbs/register_mail_login_check.php?</string>
     <string name="map">http://14.48.175.176/~fingerrate/bbs/search_tes.php?</string>
 </resources>
